# eigenview

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_original.md  README.md  package.json  playwright.config.js  pyproject.toml
.boss/: BOSS-README.md  CURRENT-STEP.md  NEXT-SESSION.md  PROCESS-TEMPLATE.md  audit-2026-05-24.md  baseline-tests.txt  certification.json  design-review.md  institutional-ai-layer-research.md  run-plan.md  spec-ui-requirements.md  spec.md  verification.md
.boss/hooks/: pre-commit.sh
.github/: pull_request_template.md
.github/workflows/: ac-audit.yml  integration-live.yml  test.yml
docs/: 01-vision.md  02-modules.md  03-factors.md  04-templates.md  05-architecture.md  06-build-plan.md  07-decisions.md  08-open-questions.md  09-design-system.md  10-ux-patterns.md  11-ai-spec.md  12-engineering-standards.md  13-dashboard-spec.md  13-ta-dormant-reference.md  14-data-sources.md  15-dormant-forward-activation.md  15-sentiment-proposal.md  16-ui-glam-changelog.md  17-thresholds.md  EigenView_ai_vs_rules.html  EigenView_build_reality_check.html  EigenView_competitive_map.html  EigenView_merger_proposal.html  EigenView_product_proposal.html  EigenView_signal_dashboard.html  HANDOFF-GLASSVELVET-WIRING.md  PHASE-A-HANDOFF.md  PLAN-dormant-rebuild-2026-05-30.md  SESSION-HANDOFF-2026-05-29-macro-sentiment.md  WALK-FORWARD-DATA-PULL-2026-05-30.md  chat-tracker.html  dormant-flow.md  engineering-process.html  intelligent-layer-design.md  signal-tracker-state.json  signal-tracker.html  spec-factor-modules.md  trading-architecture.md  wireframe-ux-options.html
docs/archive/: TODO-2026-05-04.md  implementation-phases-2026-05-04.md  signal-audit-proposal-2026-05-04.md
docs/wireframes/: README.md  eigenview-mock-v3.html  wireframe-v1.html  wireframe-v2.html
scripts/: _gen_options_universe.py  audit_scan.py  bench_sentiment.py  check_db.py  check_scan.py  count_rows.py  databento_cost_estimate.py  databento_load.py  debug6d.py  debug6d2.py  debug6d3.py  debug6d4.py  dedup_dormant.py  dormant_fire_count.py  download_liquid_history.py  find_dormant.py  patch_technical.py  populate_db.py  run_activation.py  score_bd_filter.py  setup-scheduler.ps1  ta_firing_count.py  test_smc.py  validate_pipeline.py
src/eigenview/: cli.py  config.py
tests/: conftest.py  test_ci_checks.py  test_cli.py  test_cli_commands.py  test_cli_real.py
tests/api/: conftest.py  test_api_routes.py  test_api_routes_real.py  test_chat.py  test_chat_real.py  test_layouts.py  test_picks_contract.py  test_picks_logic.py  test_score_technical_contract.py  test_spec.py  test_spec_real.py
tests/data/: conftest.py  test_calendar.py  test_calendar_real.py  test_chains.py  test_chains_real.py  test_macro.py  test_macro_live.py  test_macro_real.py  test_news.py  test_news_pure.py  test_news_refresh_real.py  test_news_throttle.py  test_prices.py  test_prices_real.py  test_storage.py  test_universe_pure.py
tests/enforcement/: test_pre_build_gate.py  test_pre_commit.py  test_stop_gate.py
tests/factors/: conftest.py  test_activation.py  test_dormant.py  test_dormant_score_db.py  test_dormant_scoring.py  test_flow.py  test_gex.py  test_macro_regime.py  test_macro_regime_pure.py  test_sentiment.py  test_sentiment_pure.py  test_spec_compliance.py  test_ta_scan_score.py  test_technical.py  test_technical_adapter.py  test_technical_csv_coverage.py  test_technical_fixtures.py  test_technical_phase6_real.py  test_technical_phase6a.py  test_technical_phase6b.py  test_technical_phase6c.py  test_technical_phase6d.py  test_technical_pullback.py  test_technical_real.py
tests/fixtures/: nvda_daily_2024.csv  (+27 more)
web/: index.html  ta-scan.html
(+125 files in other folders)
