[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eigenview"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "pandas-ta>=0.3.14b0",
    "smartmoneyconcepts>=0.0.27",
    "scipy>=1.11",
    "py_vollib>=1.0.1",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "httpx>=0.27",
    "anthropic>=0.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "tenacity>=8.2",
    "typer>=0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-vcr>=1.0",
    "pytest-cov>=5.0",
    "vcrpy>=6.0",
    "pytest-snapshot>=0.9",
    "aiofiles>=23.2",
]

[project.optional-dependencies]
ml = [
    "scikit-learn>=1.4",
    "sentence-transformers>=2.7",
    "transformers>=4.40",
    "torch>=2.2",
]

[project.scripts]
eigenview = "eigenview.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eigenview"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow",
    "integration: marks integration tests",
    "network: marks tests requiring network access",
]

[tool.coverage.run]
source = ["src/eigenview"]

[tool.coverage.report]
fail_under = 80

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
